--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,24 @@ h1,h2,p{
 	margin: 0;
 	padding: 0;
 }
+button,input{
+	outline: none;
+}
+.red{
+	color: #b81b17;
+}
+.btn0{
+	background: none;
+	border: none;
+	background: #b81b17;
+	color: #fff;
+	height: 30px;
+	padding: 0 10px;
+	outline: none;
+}
+.btn0:hover{
+	background: #ab1612;
+}
 
 .left{
 	float: left;
@@ -43,6 +61,39 @@ h1,h2,p{
 
 body{
 	background: #e5d8c7;
+}
+.top-nav{
+	height: 38px;
+	background: #535353;
+	font-size: 14px;
+}
+.top-nav .btn a{
+	color: #fff;
+	margin-right: 18px;
+	line-height: 38px;
+}
+.top-nav .search{
+	position: relative;
+}
+.top-nav .search input{
+	display: block;
+	padding: 0 40px 0 10px;
+	width: 220px;
+	height: 28px;
+	margin-top: 4px;
+	background: none;
+	border: 1px solid #fff;
+	border-radius: 14px;
+	color: #fff;
+	outline: none;
+}
+.search-bnt{
+	position: absolute;
+	width: 18px;
+	height: 18px;
+	padding: 5px;
+	right: 10px;
+	top: 5px;
 }
 .header{
 	height: 76px;
@@ -110,14 +161,15 @@ body{
 	width: 100%;
 }
 .soil-wrap .item .pic{
-	width: 100%;
+	width: 242px;
 	height: 144px;
 	background: url(../images/pic-bg.png) no-repeat;
+	text-align: center;
 	
 }
 .soil-wrap .item .soil-pic{
 	width: 200px;
-	max-height: 110px;
+	min-height: 110px;
 	margin-top: 17px;
 	
 }
@@ -362,7 +414,7 @@ body{
 	line-height: 50px;
 	padding: 0 18px;
 	border-bottom: 1px solid #b5b5b5;
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .list-wrap{
@@ -462,4 +514,679 @@ body{
 }
 .article-content .pic img{
 	max-width: 100%;
+}
+
+.login{
+	position: relative;
+	min-height: 438px;
+	margin-bottom: -62px;
+	background: #f4f4f4;
+	padding-top: 82px;
+}
+.login .redbg{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 260px;
+	background: #b81b17;
+}
+.login-wrap{
+	position: relative;
+	z-index: 2;
+	width: 690px;
+	height: 370px;
+	margin: 0 auto;
+	background: #fff;
+	-webkit-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	-moz-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	font-size: 14px;
+}
+.login-wrap .pic{
+	width: 288px;
+}
+.login-wrap .right-box{
+	width: 328px;
+	padding: 15px 37px 0 37px;
+}
+.login-wrap .title{
+	height: 38px;
+	line-height: 38px;
+	margin-bottom: 32px;
+	text-align: center;
+	font-size: 0;
+}
+.login-wrap .title a{
+	display: inline-block;
+	line-height: 38px;
+	height: 38px;
+	font-size: 20px;
+	padding: 0 3px;
+	margin: 0 46px;
+}
+.login-wrap .title .active{
+	border-bottom: 2px solid #9e3a3c;
+}
+.login-wrap .list{
+	height: 46px;
+	margin-bottom: 18px;
+}
+.login-wrap .list .inp{
+	height: 46px;
+	padding: 0 18px;
+	width: 100%;
+	box-sizing: border-box;
+	border: 1px solid #dcdcdc;
+}
+.login-btn input{
+	width: 100%;
+	height: 38px;
+	padding: 0;
+	border: none;
+	background: #b81b17;
+	color: #fff;
+}
+.login-btn{
+	margin: 30px 0;
+}
+.login-wrap .tip input {
+	float: left;
+	margin-top: 4px;
+}
+.login-wrap .tip .forget{
+	color: #b81b17;
+}
+.register-box{
+	padding-bottom: 82px;
+}
+.register-wrap{
+	position: relative;
+	z-index: 2;
+	width: 1100px;
+	margin: 0 auto;
+	font-size: 14px;
+	background: #fff;
+	-webkit-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	-moz-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+}
+.register-wrap .base-info{
+	border-bottom: 1px solid #dcdcdc;
+}
+.register-wrap .title{
+	padding-left: 20px;
+	line-height: 58px;
+	border-bottom: 1px solid #dcdcdc;
+	font-size: 20px;
+}
+.register-wrap .inp-wrap{
+	padding: 20px 70px;
+}
+.register-wrap .inp-wrap .left{
+	width: 50%;
+}
+.register-wrap .inp-wrap .list{
+	font-size: 0;
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 28px;
+}
+.register-wrap .name{
+	display: inline-block;
+	width: 70px;
+	font-size: 14px;
+	text-align: right;
+}
+.register-wrap .inp{
+	display: inline-block;
+	height: 30px;
+	padding: 0 10px;
+	width: 220px;
+	border: 1px solid #dcdcdc;
+	font-size: 14px;
+	outline: none;
+}
+.register-wrap .list .detail{
+	font-size: 14px;
+}
+.register-wrap .list .detail label{
+	margin-right: 20px;
+}
+.register-wrap .list .red{
+	display: inline-block;
+	font-size: 20px;
+	font-weight: bold;
+	color: #b81b17;
+	margin-left: 4px;
+}
+
+.add-school{
+	padding: 28px 40px;
+	margin: 10px 0;
+	border-bottom: 1px solid #dcdcdc;
+}
+.add-school .add-title{
+	padding: 0 45px;
+	line-height: 42px;
+	background: #ffd0cf;
+	font-size: 16px;
+}
+.add-school .add-btn{
+	float: right;
+	height: 28px;
+	width: 60px;
+	margin-top: 7px;
+	padding: 0;
+	background: #b81b17;
+	border-radius: 4px;
+	border: none;
+	color: #fff;	
+}
+.add-school  .add-detail{
+	position: relative;
+	padding-bottom: 20px;
+	border-bottom: 1px solid #dcdcdc;
+	
+}
+.add-school  .add-detail{
+	height: 160px;
+	padding-top: 28px;
+}
+.add-school  .add-detail:nth-last-child(1){
+	padding-bottom: 0;
+	border-bottom: none;
+}
+.add-detail .list{
+	float: left;
+	width: 50%;
+	margin-bottom: 28px;
+	line-height: 30px;
+	height: 30px;
+}
+.add-detail .time-box .inp{
+	width: 125px;
+}
+.add-detail .classmate .inp,.add-detail .class .inp{
+	width: 80px;
+}
+.add-detail .selt{
+	width: 240px;
+}
+.add-detail .class .selt{
+	width: 100px;
+}
+.add-school .close{
+	position: absolute;
+	top: 5px;
+	right: 0;
+}
+.add-school .close a{
+	display: block;
+	width: 30px;
+	height: 30px;
+	line-height: 30px;
+	text-align: center;
+	background: #ffd0cf;
+	color: #f6f6f6;
+	border-radius: 50%;
+	font-size: 16px;
+	font-weight: bold;
+	-webkit-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+	-moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+.register-btn{
+	padding: 28px 40px;
+}
+.register-btn .code .inp{
+	width: 100px;
+	margin-right: 10px;
+}
+.register-btn .code .btn0{
+	background: #ffc9c8;
+	color: #b81b17;
+}
+.register-btn .btn-wrap{
+	text-align: center;
+	padding: 30px 0;
+}
+.register-btn .btn-wrap .btn0{
+	height: 40px;
+	width: 140px;
+	font-size: 16px;
+}
+
+.forget-wrap .right-box{
+	width: 556px;
+	margin: 0 auto;
+}
+.forget-wrap .right-box .inp{
+	height: 30px;
+	width: 408px;
+}
+.forget-wrap .list{
+	height: 30px;
+	margin-bottom: 20px;
+}
+.forget-wrap .title span{
+	display: inline-block;
+}
+.forget-wrap .title .text{
+	margin: 0 18px;
+	font-size: 20px;
+}
+.forget-wrap .title .line{
+	vertical-align: top;
+	margin-top: 20px;
+	height: 1px;
+	width: 216px;
+	background: #b81b17;
+}
+.forget-wrap .name{
+	display: inline-block;
+	width: 110px;
+	text-align: right;
+}
+.forget-wrap .get_code .inp{
+	width: 310px;
+	margin-right: 10px;
+}
+.forget-wrap .get_code .btn0{
+	background: #ffc9c8;
+	color: #b81b17;
+}
+.forget-wrap .forget-btn{
+	text-align: center;
+	margin-top: 30px;
+}
+.forget-wrap .forget-btn .btn0{
+	margin: 0 15px;
+	width: 70px;
+}
+
+.publish-wrap .main-content{
+	padding: 20px 0 62px;
+}
+.publish-wrap .list{
+	margin-bottom: 20px;
+}
+.publish-wrap .inp{
+	width: 800px;
+}
+.publish-wrap .name{
+	width: 80px;
+	margin-right: 10px;
+}
+.publish-wrap .text-box .name{
+	vertical-align: top;
+}
+.publish-wrap .text-box{
+	min-height: 210px;
+}
+.publish-wrap .text-inp{
+	min-height: 200px;
+	padding-top: 10px;
+}
+.publish-wrap .btn-wrap{
+	margin: 40px 0;
+	text-align: center;
+}
+.publish-wrap .btn-wrap .btn0{
+	width: 120px;
+	height: 40px;
+	font-size: 16px;
+	margin: 0 20px;
+}
+
+.user-center{
+	font-size: 14px;
+}
+
+.user-center .location{
+	border-bottom: none;
+}
+.center-wrap .left-menu{
+	width: 158px;
+}
+.center-wrap .menu-title{
+	line-height: 68px;
+	margin-bottom: 10px;
+	font-size: 14px;
+	font-weight: normal;
+	border-bottom: 1px solid #a89d90;
+}
+.menu-list .item{
+	display: block;
+	line-height: 52px;
+	padding-right: 10px;
+	background: url(../images/to-left.png) no-repeat 148px center;
+}
+.menu-list .active{
+	color: #b91b18;
+	background: url(../images/to-left-active.png) no-repeat 148px center;
+}
+
+.right-center .tab-wrap{
+	height: 68px;
+	line-height: 68px;
+}
+.right-center .tab-wrap span{
+	float: left;
+}
+.right-center .tab-wrap .active-title{
+	padding-right: 25px;
+	font-size: 16px;
+	font-weight: bold;
+}
+.right-center .tab-wrap .line{
+	margin-right: 25px;
+	color: #a89d90;
+}
+.right-center .tab-wrap .tip{
+	float: right;
+	padding-right: 30px;
+	font-size: 12px;
+	color: #b91b18;
+}
+.right-center .tab-wrap .tip .btn0{
+	border-radius: 2px;
+	background: #d67a7b;
+}
+.right-center .tab-wrap .tip .btn0:hover{
+	background: #b91b18;
+}
+.right-center .tab1 a{
+	display: inline-block;
+	height: 32px;
+	line-height: 32px;
+	margin-right: 25px;
+	padding: 0 20px;
+}
+.right-center .tab1 .active{
+	background: #b91b18;
+	color: #fff;
+	border-radius: 18px;
+}
+.user-center .right-center{
+	width: 900px;
+}
+.center-content{
+	padding: 30px;
+	margin-bottom: 20px;
+	background: #fff;
+	-webkit-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	-moz-box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	box-shadow: 0 2px 8px 2px rgba(0,0,0,.1);
+	border-radius: 8px;
+}
+.center-content .number{
+	margin-right: 80px;
+}
+.center-content .list{
+	line-height: 30px;
+	margin-bottom: 20px;
+}
+.avtor{
+	min-height: 100px;
+}
+.center-content .name{
+	float: left;
+	width: 80px;
+}
+.center-content .name.two{
+	letter-spacing: 7px;
+}
+.center-content .list .detail{
+	float: left;
+}
+.center-content .detail .tip1{
+	display: block;
+	line-height: 20px;
+}
+.center-content .left-side{
+	width: 50%;
+}
+.center-content .inp{
+	height: 30px;
+	padding: 0 10px;
+	width: 200px;
+	border: 1px solid #dcdcdc;
+}
+.center-content .left-side label{
+	margin-right: 20px;
+}
+.center-content .btn-wrap{
+	text-align: center;
+	margin-top: 30px;
+}
+.center-content .btn-wrap .btn0{
+	width: 100px;
+	border-radius: 2px;
+}
+
+.center-content .add-school{
+	padding: 0;
+	margin: 0;
+	border: none;
+}
+.center-content .add-detail{
+	border-bottom: 1px solid #eee;
+	height: auto;
+}
+.center-content .add-school .time-box .inp{
+	width: 68px;
+}
+.center-content .add-detail .selt{
+	width: 220px;
+}
+.center-content .add-detail .classmate .inp,.center-content .add-detail .class .inp{
+	width: 60px;
+}
+.center-content .add-detail .class .selt{
+	width: 100px;
+}
+
+.school-list .list{
+	line-height: 50px;
+	border-bottom: 1px solid #eee;
+}
+.center-content .school-list .list{
+	margin-bottom: 0;
+}
+.school-list .list div{
+	float: left;
+	width: 33%;
+	text-align: center;
+}
+.other-info .school-list .time-bettwen{
+	width: 220px;
+}
+.other-info .school-list .school-address{
+	width: 240px;
+}
+.other-info .school-list .major{
+	width: 110px;
+}
+.other-info .school-list .edu-bg{
+	width: 100px;
+}
+.other-info .school-list .operate{
+	width: 170px;
+}
+.other-info .school-list .operate a{
+	margin: 0 20px;
+	color: #b81b17;
+}
+.school-publish .list{
+	margin: 0;
+	padding: 10px 0;
+	border-bottom: 1px dashed #d7d7d7;
+}
+.school-publish .list a{
+	display: block;
+}
+.school-publish .list .text, .school-publish .list .statue, .school-publish .list .publish-time{
+	float: left;
+}
+.school-publish .list .text{
+	padding-left: 20px;
+	width: 640px;
+	background: url(../images/dot.png) no-repeat 0 center;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+}
+.school-publish .list .statue{
+	margin: 0 20px;
+	width: 60px;
+	height: 32px;
+	text-align: center;
+	background: #fff3f3;
+	border-radius: 2px;
+	color: #666;
+}
+.school-publish .list a:hover .text{
+	color: #b91b18;
+}
+
+.page .page-box01,.page .page-box02{
+	float: left;
+}
+.page .page-box01{
+	margin-left: 200px;
+}
+.page .pagelist li{
+	float: left;
+}
+.page-box02 .inp{
+	height: 25px;
+	width: 60px;
+}
+.right-center .register-wrap{
+	width: auto;
+	box-shadow: none;
+	padding: 0;
+}
+.right-center .publish-wrap .inp{
+	width: 600px;
+}
+.my-schoolmate .option{
+	line-height: 45px;
+	padding-left: 20px;
+	border: none;
+}
+.my-schoolmate .option span{
+	margin-right: 30px;
+}
+.my-schoolmate .option-item .inp{
+	width: 120px;
+}
+.my-schoolmate .center-content .list{
+	height: 45px;
+	line-height: 45px;
+}
+.my-schoolmate .list-item{
+	float: left;
+	text-align: center;
+	height: 45px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+}
+.friend-avtor{
+	width: 92px;
+}
+.friend-name{
+	width: 70px;
+}
+.friend-sex{
+	width: 50px;
+}
+.friend-year{
+	width: 120px;
+}
+.friend-phone{
+	width: 120px;
+}
+.friend-birthday{
+	width: 100px;
+}
+.friend-job{
+	width: 80px;
+}
+.friend-address{
+	width: 150px;
+}
+.friend-detail{
+	width: 55px;
+}
+
+.friend-avtor1{
+	width: 62px;
+}
+.friend-name1{
+	width: 60px;
+}
+.friend-sex1{
+	width: 30px;
+}
+.friend-year1{
+	width: 100px;
+}
+.friend-phone1{
+	width: 110px;
+}
+.friend-birthday1{
+	width: 80px;
+}
+.friend-job1{
+	width: 40px;
+}
+.friend-address1{
+	width: 90px;
+}
+.friend-time1{
+	width: 60px;
+}
+.friend-source1{
+	width: 95px;
+}
+.friend-detail1{
+	width: 110px;
+	text-align: center;
+}
+
+
+.my-schoolmate .center-content .title2{
+	padding: 0;
+	background: #ffe5e4;
+	border: none;
+}
+.friend-avtor .img{
+	max-width: 80px;
+}
+.friend-avtor .img{
+	max-width: 62px;
+}
+.friend-detail .more,.friend-detail1 .more{
+	display: inline-block !important;
+	width: 52px;
+	height: 28px;
+	margin-left: 4px;
+	text-align: center;
+	line-height: 28px;
+	background: #d09b5a;
+	border-radius: 2px;
+	color: #fff;
+	margin-top: 8px;
+}
+.friend-detail .more:hover,.friend-detail1 .more:hover{
+	background: #b88444;
+}
+.my-group .list-item{
+	width: 16%;
+}
+.my-recomend .list-item{
+	width: 20%;
 }
